--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<title>My Photo Gallery</title>
-	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 	<section id="gallery">
@@ -10,6 +9,25 @@
 		<ul id="image-list"></ul>
 	</section>
 
-	<script src="Jscript.js"></script>
+	<script>
+	  const githubURL = "https://api.github.com/repos/<publicflashing>/<publicflashing.github.io>/contents/<images>";
+	  const gallery = document.getElementById("image-list");
+	  
+	  fetch(githubURL)
+	    .then(response => response.json())
+	    .then(data => {
+	      data.forEach(image => {
+	        const li = document.createElement("li");
+	        const img = document.createElement("img");
+	        
+	        img.src = image.download_url;
+	        img.alt = image.name;
+	        
+	        li.appendChild(img);
+	        gallery.appendChild(li);
+	      })
+	    })
+	    .catch(error => console.error(error));
+	</script>
 </body>
 </html>
