--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</section>
 
 	<script>
-	  const githubURL = "https://api.github.com/repos/<publicflashing>/<publicflashing>/contents/<images>";
+	  const githubURL = "https://api.github.com/repos/publicflashing/publicflashing/contents/images";
 	  const gallery = document.getElementById("image-list");
 	  
 	  fetch(githubURL)
